<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NFC HTTP Service"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnIniciarServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_servicio" />

    <Button
        android:id="@+id/btnDetenerServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detener_servicio"
        android:enabled="false" />

    <TextView
        android:id="@+id/tvEstadoServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/servicio_inactivo"
        android:layout_marginBottom="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lectura_nfc_manual"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnLeerNFC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leer_nfc" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre" />

    <EditText
        android:id="@+id/etSaldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/saldo" />

</LinearLayout>